# LittleFileManager

./: .clang-format  .gitignore  CMakeLists.txt  README.md  filemanager
include/: FileManager.h
src/: FileManager.cpp  main.cpp
